[project]
name = "pdf2html"
version = "1.0.0"
authors = [
    { name = "Joshua Hegedus", email = "josh.hegedus@outlook.com" },
]

maintainers = [
    { name = "Joshua Hegedus", email = "josh.hegedus@outlook.com" },
]

description = "A library to convert PDFs to HTML"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'boto3',
]

[project.urls]
Homepage = "https://github.com/kougen/pdf2html"
Issues = "https://github.com/kougen/pdf2html/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
